# Proyecto-02-CE-2103

./: CMakeLists.txt  main.cpp
BMP/: BmpTutorial.cpp  CMakeLists.txt  Image.cpp  Image.h
Interfaz/: Interfaz.pro  Interfaz_es_CR.ts  Stack.cpp  Stack.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  openglwidget.cpp  openglwidget.h
Interfaz_Canvas/: Interfaz_Canvas.pro  Interfaz_Canvas_es_CR.ts  mainwindow.cpp  mainwindow.h  mainwindow.ui
build-Interfaz-Desktop-Debug/: Interfaz  Makefile  moc_mainwindow.cpp  ui_mainwindow.h
build-Interfaz_Canvas-Desktop-Debug/: Interfaz_Canvas  Makefile  moc_mainwindow.cpp  ui_mainwindow.h
